RESOLVED FIXED228164
ASSERTION FAILED: m_messagesBeingDispatched.isEmpty() on http/tests/resourceLoadStatistics/website-data-removal-for-site-with-user-interaction.html
https://bugs.webkit.org/show_bug.cgi?id=228164
Summary ASSERTION FAILED: m_messagesBeingDispatched.isEmpty() on http/tests/resourceL...
ayumi_kojima
Reported 2021-07-21 13:34:13 PDT
http/tests/resourceLoadStatistics/website-data-removal-for-site-with-user-interaction.html Is a flaky crash on iOS 14 E Simulator wk2 Debug. Crash log: ASSERTION FAILED: m_messagesBeingDispatched.isEmpty() /Volumes/Data/worker/ios-simulator-14-debug/build/Source/WebKit/Platform/IPC/Connection.cpp(228) : void IPC::Connection::SyncMessageState::dispatchMessagesAndResetDidScheduleDispatchMessagesForConnection(IPC::Connection &) 1 0x1058f3a19 WTFCrash 2 0x10ded5f3b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x10df51b0c IPC::Connection::SyncMessageState::dispatchMessagesAndResetDidScheduleDispatchMessagesForConnection(IPC::Connection&) 4 0x10df6a6f1 IPC::Connection::SyncMessageState::processIncomingMessage(IPC::Connection&, std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >&)::$_2::operator()() 5 0x10df6a5fe WTF::Detail::CallableWrapper<IPC::Connection::SyncMessageState::processIncomingMessage(IPC::Connection&, std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >&)::$_2, void>::call() 6 0x1059218c2 WTF::Function<void ()>::operator()() const 7 0x1059aa6a0 WTF::RunLoop::performWork() 8 0x1059af0d1 WTF::RunLoop::performWork(void*) 9 0x104454ede __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 10 0x104454dd6 __CFRunLoopDoSource0 11 0x10445429e __CFRunLoopDoSources0 12 0x10444e9f7 __CFRunLoopRun 13 0x10444e1a7 CFRunLoopRunSpecific 14 0x103bd4204 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 15 0x1012282be WTR::TestController::platformRunUntil(bool&, WTF::Seconds) 16 0x1011ebc7f WTR::TestController::runUntil(bool&, WTF::Seconds) 17 0x1011fa35a WTR::TestController::dumpResourceLoadStatistics() 18 0x1012506c7 WTR::TestInvocation::didReceiveMessageFromInjectedBundle(OpaqueWKString const*, void const*) 19 0x1011f408b WTR::TestController::didReceiveMessageFromInjectedBundle(OpaqueWKString const*, void const*) 20 0x1011ef5ac WTR::TestController::didReceiveMessageFromInjectedBundle(OpaqueWKContext const*, OpaqueWKString const*, void const*, void const*) 21 0x10f41b8ed WebKit::WebContextInjectedBundleClient::didReceiveMessageFromInjectedBundle(WebKit::WebProcessPool&, WTF::String const&, API::Object*) 22 0x10f5b7045 WebKit::WebProcessPool::handleMessage(IPC::Connection&, WTF::String const&, WebKit::UserData const&) 23 0x110402459 void IPC::callMemberFunctionImpl<WebKit::WebProcessPool, void (WebKit::WebProcessPool::*)(IPC::Connection&, WTF::String const&, WebKit::UserData const&), std::__1::tuple<WTF::String, WebKit::UserData>, 0ul, 1ul>(WebKit::WebProcessPool*, void (WebKit::WebProcessPool::*)(IPC::Connection&, WTF::String const&, WebKit::UserData const&), IPC::Connection&, std::__1::tuple<WTF::String, WebKit::UserData>&&, std::__1::integer_sequence<unsigned long, 0ul, 1ul>) 24 0x110402270 void IPC::callMemberFunction<WebKit::WebProcessPool, void (WebKit::WebProcessPool::*)(IPC::Connection&, WTF::String const&, WebKit::UserData const&), std::__1::tuple<WTF::String, WebKit::UserData>, std::__1::integer_sequence<unsigned long, 0ul, 1ul> >(IPC::Connection&, std::__1::tuple<WTF::String, WebKit::UserData>&&, WebKit::WebProcessPool*, void (WebKit::WebProcessPool::*)(IPC::Connection&, WTF::String const&, WebKit::UserData const&)) 25 0x110401c35 void IPC::handleMessage<Messages::WebProcessPool::HandleMessage, WebKit::WebProcessPool, void (WebKit::WebProcessPool::*)(IPC::Connection&, WTF::String const&, WebKit::UserData const&)>(IPC::Connection&, IPC::Decoder&, WebKit::WebProcessPool*, void (WebKit::WebProcessPool::*)(IPC::Connection&, WTF::String const&, WebKit::UserData const&)) 26 0x1104019c6 WebKit::WebProcessPool::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 27 0x10e45f754 IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 28 0x10f5b65de WebKit::WebProcessPool::dispatchMessage(IPC::Connection&, IPC::Decoder&) 29 0x10f5c3ca3 WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 30 0x10df589b4 IPC::Connection::dispatchMessage(IPC::Decoder&) 31 0x10df5919f IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)
Attachments
Patch (4.51 KB, patch)
2021-12-07 11:37 PST, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2021-07-21 13:34:37 PDT
ayumi_kojima
Comment 2 2021-07-21 13:59:09 PDT
I was not able to reproduce the crash on simulator (iOS 15) on my local machine using run-webkit-tests --ios-simulator --debug -f --exit-after-n-failures 2 --exit-after-n-crashes-or-timeouts 2 --iterations 50 http/tests/resourceLoadStatistics/website-data-removal-for-site-with-user-interaction.html
ayumi_kojima
Comment 3 2021-07-21 14:43:58 PDT
ayumi_kojima
Comment 4 2021-10-15 11:15:37 PDT
*** Bug 228668 has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 5 2021-12-07 11:37:39 PST
EWS
Comment 6 2021-12-07 12:42:38 PST
Committed r286609 (?): <https://commits.webkit.org/r286609> All reviewed patches have been landed. Closing bug and clearing flags on attachment 446211 [details].
Note You need to log in before you can comment on or make changes to this bug.